--- a/composer.json
+++ b/composer.json
@@ -36,6 +36,7 @@
     },
     "require": {
         "php": ">=8.1",
+        "psr/cache": "^3.0",
         "swew/dd": "^1.0"
     },
     "require-dev": {
