chore: bump versions

--- a/composer.json
+++ b/composer.json
@@ -1,7 +1,7 @@
 {
     "name": "swew/db",
     "type": "library",
-    "description": "Migration tool",
+    "description": "A lightweight, fast, and secure PHP library for interacting with databases, creating migrations, and running queries. swew/db uses prepared statements to protect against SQL injection attacks and supports multiple database systems.",
     "keywords": ["database", "migrations", "model", "pdo", "orm"],
     "license": "MIT",
     "authors": [
@@ -40,16 +40,16 @@
         "psr/simple-cache": "^3.0"
     },
     "require-dev": {
-        "laravel/pint": "^1.0",
-        "phpstan/phpstan": "^1.8",
-        "swew/dd": "^1.0",
-        "swew/test": "^1.0",
-        "vimeo/psalm": "^4.24"
+        "laravel/pint": "v1.6.0",
+        "phpstan/phpstan": "^1.10.3",
+        "psalm/phar": "^5.7.6",
+        "swew/dd": "^v1.0.0",
+        "swew/test": "^v1.0.9"
     },
     "scripts": {
         "test": "t",
-        "static": "./vendor/bin/psalm --no-cache",
-        "stan": "vendor/bin/phpstan analyse src",
+        "static": "./vendor/psalm/phar/psalm.phar --no-cache",
+        "stan": "vendor/bin/phpstan analyse src --level=5",
         "code-check": "./vendor/bin/pint",
         "check": [
             "@static",
