--- a/composer.json
+++ b/composer.json
@@ -17,9 +17,6 @@
         }
     ],
     "config": {
-        "platform": {
-            "php": "8.1"
-        },
         "sort-packages": true,
         "optimize-autoloader": true
     },
@@ -41,7 +38,8 @@
         }
     },
     "require": {
-        "php": ">=8.1",
+        "php": ">=8.2",
+        "ext-pdo": "*",
         "psr/simple-cache": "^3.0"
     },
     "require-dev": {
